# parcel-clustering

./: .gitignore  ARCHER2.md  Cirrus.md  LICENSE  Makefile.am  README.md  configure.ac
cpp/: Makefile.am  netcdf_reader.cpp  netcdf_reader.h  verify_cluster_algorithm.cpp
m4/: ax_compiler_vendor.m4
pytools/: Makefile.am  nc_reader.py  plot_scaling.py  verify_cluster_algorithm.py
scripts/: archer2.sh  cirrus.sh  hotlum.sh
scripts/benchmark_random/: run_random.sh  submit_archer2_random.sh  submit_cirrus_random.sh  submit_random.sh
scripts/benchmark_read/: run_read.sh  submit_archer2_read.sh  submit_cirrus_read.sh  submit_hotlum_read.sh
scripts/benchmark_verify/: run_verify.sh  submit_archer2_verify.sh  submit_cirrus_verify.sh  submit_hotlum_verify.sh  submit_verify.sh
src/: Makefile.am  benchmark_parcel_merging.f90  benchmark_random.f90  benchmark_read.f90  benchmark_verify.f90  options.f90  parameters.f90  utils.f90  verify.f90  verify_cluster_algorithm.cpp
src/mpi/: Makefile.am  mpi_collectives.f90  mpi_datatypes.f90  mpi_environment.f90  mpi_layout.f90  mpi_ops.f90  mpi_tags.f90  mpi_timer.f90  mpi_utils.f90
src/netcdf/: netcdf_reader.f90  netcdf_timings.f90  netcdf_utils.f90  netcdf_writer.f90
src/parcels/: Makefile.am  parcel_bc.f90  parcel_container.f90  parcel_ellipsoid.f90  parcel_init.f90  parcel_merge.f90  parcel_mpi.f90  parcel_nearest.f90  parcel_nearest_caf_graph.f90  parcel_nearest_graph.f90  parcel_nearest_p2p_graph.f90  parcel_nearest_rma_graph.f90  parcel_nearest_rma_stage_lock_graph.f90  parcel_nearest_shmem_graph.f90  parcel_netcdf.f90  parcel_ops.f90  parcel_split.f90
src/serial/: parcel_merge_serial.f90  parcel_nearest_serial.f90
src/utils/: Makefile.am  armanip.f90  iomanip.f90  linalg.f90  parameters.f90  scherzinger.f90
