pytoolsdir = $(bindir)/pytools

# avoid byte-compilation because autoconf 2.69 does not support the package
# "importlib" which replaces the package "imp" that got removed in Python 3.12
nobase_pytools_DATA =                	\
	nc_base_reader.py         	\
	nc_reader.py			\
	verify_cluster_algorithm.py	\
	plot_scaling.py
